# mlx-quant-tools

./: README.md  pyproject.toml
src/mlx_quant_tools/: __init__.py  gguf_config_synth.py  gguf_name_remap.py  gguf_runtime.py  gguf_tokenizer.py  load_gguf_kquant.py  model_role_classifier.py
src/mlx_quant_tools/cli/: attn_protect_quantize.py  calibrate_imatrix.py  dequant_gguf_kquant.py  gguf_to_mlx_kquant.py  inspect_recipe.py  load_mlx_kquant.py  make_kld_rollup.py  quantize_kquant.py  run_gguf_kquant.py  score_kld.py  serve_gguf_kquant.py  validate_kquant_dequant.py
tests/: test_attn_protect_predicate.py
